--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,8 @@ spring.application.name=bplte-core-api
 
 # default context
 server.servlet.context-path=/bplte/core
+
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+spring.datasource.url=jdbc:mariadb://localhost:3306/BPLTE?allowMultiQueries=true
+spring.datasource.username=bplte_admin
+spring.datasource.password=Admin1234!@
