--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.name=bplte-core-api
 # default context
 server.servlet.context-path=/bplte/core
 
-spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
-spring.datasource.url=jdbc:mariadb://localhost:3306/BPLTE?allowMultiQueries=true
+spring.datasource.driver-class-name=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
+spring.datasource.url=jdbc:log4jdbc:mariadb://localhost:3306/BPLTE?allowMultiQueries=true
 spring.datasource.username=bplte_admin
 spring.datasource.password=Admin1234!@
