feat: JWT 를 위한 베이스 작업 (필터 처리, JWT 연관 속성 분리, cors 클래스 변경 및 개선)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,8 @@ spring.datasource.driver-class-name=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
 spring.datasource.url=jdbc:log4jdbc:mariadb://localhost:3306/BPLTE?allowMultiQueries=true
 spring.datasource.username=bplte_admin
 spring.datasource.password=Admin1234!@
+
+# JWT Configuration
+jwt.secret=BOILERPLATE-CORE-JWT-SECRET-KEY-2025
+jwt.access-token-expiration=86400000
+jwt.refresh-token-expiration=604800000
