feat: 보안을 위해 DB 접속 정보와 JWT 키 분리

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,11 +4,11 @@ spring.application.name=bplte-core-api
 server.servlet.context-path=/bplte/core
 
 spring.datasource.driver-class-name=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
-spring.datasource.url=jdbc:log4jdbc:mariadb://localhost:3306/BPLTE?allowMultiQueries=true
-spring.datasource.username=bplte_admin
-spring.datasource.password=Admin1234!@
+spring.datasource.url=${DB_URL}?allowMultiQueries=true
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
 
 # JWT Configuration
-jwt.secret=BOILERPLATE-CORE-JWT-SECRET-KEY-2025
-jwt.access-token-expiration=86400000
-jwt.refresh-token-expiration=604800000
+jwt.secret=${JWT_SECRET}
+jwt.access-token-expiration=${JWT_ACCESS_TOKEN_EXPIRATION}
+jwt.refresh-token-expiration=${JWT_REFRESH_TOKEN_EXPIRATION}
